# Advanced-Automated-Trading-Platform

./: DEPLOYMENT_CHECKLIST.md  Dockerfile  FEATURES.md  LICENSE  Makefile  PROJECT_STRUCTURE.md  QUICK_START.md  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt  setup.sh
backend/: __init__.py  main.py
backend/api/: __init__.py  app.py
backend/config/: __init__.py  settings.py
backend/core/: __init__.py  data_collector.py  ml_models.py  portfolio_manager.py  signal_generator.py  trading_watcher.py
backend/migrations/: __init__.py  migrate.py
backend/models/: __init__.py  database.py  schemas.py
backend/scripts/: __init__.py  init_db.py
backend/tests/: __init__.py  conftest.py  test_api.py  test_data_collector.py  test_ml_models.py
backend/utils/: __init__.py  exceptions.py  helpers.py  logger.py
docker/nginx/: nginx.conf
docker/nginx/conf.d/: trading-platform.conf
docker/postgres/init/: 01-init-db.sql
docker/prometheus/: prometheus.yml
docker/redis/: redis.conf
docker/scripts/: start-dev.sh  start.sh
scripts/: setup.sh
